@@ -41,6 +41,9 @@ Changes Since 0.4
     (``--view-mode`` & ``--hidden-controls/--visible-controls``
     options).
 
+* docutils/writers/latex2e/__init__.py:
+
+  - Apply patch for custom roles with classes from Edward Loper.
 
 Release 0.4 (2006-01-09)
 ========================
